@@ -1,39 +1,66 @@
-function stats = scinrrd_seg2label_stats(nrrd, cc, STRAIGHT, d, dict)
-% SCINRRD_SEG2LABEL_STATS  Shape stats for each label in a multi-label
-% segmentation
+function stats = scinrrd_seg2label_stats(nrrd, cc, d, dict)
+% SCINRRD_SEG2LABEL_STATS  Shape stats for each object in a multi-label
+% segmentation; objects can be straightened with an skeleton or medial line
+% before computing the stats
+%
+%   This function was developed to measure the dimensions of different
+%   objects found in a segmentation. 
+%
+%   Each voxel in the input segmentation has to be labelled as belonging to
+%   the different objects or the background.
+%
+%   This function then computes Principal Component Analysis (PCA) on the
+%   voxels of each object, to estimate the variance in the 3 principal
+%   directions, var(1), var(2) and var(3).
+%
+%   If the object is e.g. a cylindrical vessel with elliptical
+%   cross-section, the length and the 2 main diamters of the cylinder can
+%   be estimated as
+%
+%      L = sqrt(12 * var(1))
+%      d1 = sqrt(16 * var(2))
+%      d2 = sqrt(16 * var(3))
+%
+%   Because vessels are quite often curved or bent, and this gives
+%   misleading values of variance, the function can also straighten the
+%   objects using a skeleton or medial line prior to computing PCA.
+%
+% STATS = SCINRRD_SEG2LABEL_STATS(NRRD)
+%
+%   NRRD is an SCI NRRD struct with a labelled segmentation mask.
+%
+%   All voxels in nrrd.data with value 0 belong to the background. All
+%   voxels with value 1 belong to object 1, value 2 corresponds to object
+%   2, and so on.
+%
+%   STATS is a struct with the shape parameters computed for each object in
+%   the segmentation. The only measure provided currently is
+%
+%     STATS.VAR: Variance in the three principal components of the cloud
+%                of voxels that belong to each object. These are the
+%                ordered eigenvalues obtained from computing Principal
+%                Component Analysis on the voxel coordinates.
+%
+%   If an object has no voxels, the corresponding STATS values are NaN.
 %
 % STATS = SCINRRD_SEG2LABEL_STATS(NRRD, CC)
 %
-%   NRRD is an SCI NRRD struct with a labelled segmentation mask of
-%   different structures, e.g. blobs, tubes, etc.
+%   If CC is provided, then the function straightens each object before
+%   computing PCA.
 %
 %   CC is a struct produced by function skeleton_label() with the list of
-%   skeleton voxels that belongs to each label, and the parameterization
+%   skeleton voxels that belongs to each object, and the parameterization
 %   vector for the skeleton.
 %
 %   The labels can be created, e.g.
 %
-%     >> [nrrd.data, cc] = skeleton_label(sk.data, seg.data, [seg.axis.spacing]);
+%     >> nrrd = seg;
+%     >> [nrrd.data, cc] = skeleton_label(sk, seg.data, [seg.axis.spacing]);
 %
-%     where seg.data is a binary segmentation mask of all the image,
-%     sk.data is a binary segmentation mask of the skeleton.
+%     where seg is an NRRD struct with a binary segmentation, and sk is the
+%     corresponding skeleton, that can be computed using
 %
-%   STATS is a struct with the shape parameters computed for each label in
-%   the segmentation. The provided measures are:
-%
-%     STATS.VAR: Variance in the three principal components of the cloud
-%                of voxels that belong to each label. These are the
-%                ordered eigenvalues obtained from computing Principal
-%                Component Analysis on the voxel coordinates.
-%
-% STATS = SCINRRD_SEG2LABEL_STATS(..., STRAIGHT)
-%
-%   STRAIGHT is a flag. If STRAIGHT=true, then each label is warped so that
-%   its skeleton becomes a straight line before computing the shape stats.
-%
-%   This is very useful if you have bent tubular structures in the image
-%   (e.g. blood vessels) and you want to estimate the length and
-%   cross-section diameters of the tube. By default, STRAIGHT=false.
+%     >> sk = itk_imfilter('skel', seg.data);
 %
 % STATS = SCINRRD_SEG2LABEL_STATS(..., D, DICT)
 %
@@ -43,14 +70,13 @@ function stats = scinrrd_seg2label_stats(nrrd, cc, STRAIGHT, d, dict)
 %
 %     >> [d, dict] = seg2dmat(seg.data, 'seg', [seg.axis.spacing]);
 %
-%   If they are not provided externally, they are computed internally by
-%   the function.
+%   If they are not provided externally, they are computed internally.
 %
-% See also: scinrrd_seg2voxel_stats.
+% See also: skeleton_label, seg2dmat, scinrrd_seg2voxel_stats.
 
 % Author: Ramon Casero <rcasero@gmail.com>
 % Copyright © 2011 University of Oxford
-% Version: 0.1.0
+% Version: 0.2.0
 % 
 % University of Oxford means the Chancellor, Masters and Scholars of
 % the University of Oxford, having an administrative office at
@@ -76,106 +102,88 @@ function stats = scinrrd_seg2label_stats(nrrd, cc, STRAIGHT, d, dict)
 % along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 % check arguments
-error(nargchk(2, 5, nargin, 'struct'));
+error(nargchk(1, 4, nargin, 'struct'));
 error(nargoutchk(0, 1, nargout, 'struct'));
 
-% number of skeleton voxels that we are going to use to warp every
-% segmentation voxel
-K = 3;
-
 % defaults
-if (nargin < 3 || isempty(STRAIGHT))
-    STRAIGHT=false;
+if (nargin < 2)
+    cc = [];
 end
-if (nargin < 5 || isempty(d) || isempty(dict))
+if (nargin < 4 || isempty(d) || isempty(dict))
     % compute distance matrix for the whole image segmentation; this is a
     % very sparse matrix because only adjacent voxels get a connection
     [d, dict] = seg2dmat(nrrd.data, 'seg', [nrrd.axis.spacing]);
 end
 
+% number of objects
+N = max(nrrd.data(:));
+if (~isempty(cc) && (N ~= cc.NumObjects))
+    error('If CC is provided, then it must have one element per object in NRRD')
+end
+
 % init matrix to store the eigenvalues of each branch
-eigd = zeros(3, cc.NumObjects);
+eigd = nan(3, N);
 
 % loop every branch
-for I = 1:cc.NumObjects
+for I = 1:N
     
     %% find the 3 closest skeleton points for each branch voxel
     
     % list of voxels in current branch
     br = find(nrrd.data == I);
     
-    % list of voxels that are part of the skeleton in the branch
-    sk = cc.PixelIdxList{I};
-    
-    % add skeleton voxels to branch voxels (bifurcation points belong to
-    % the branch CC, but they may not be in the branch LAB)
-    br = union(br, sk);
-    
+    % if there are no voxels, skip this branch
+    if (isempty(br))
+        continue
+    end
+        
     % coordinates of branch voxels
     [r, c, s] = ind2sub(size(nrrd.data), br);
-    x = scinrrd_index2world([r, c, s], nrrd.axis)';
+    xi = scinrrd_index2world([r, c, s], nrrd.axis)';
     
-    % create a distance matrix for only the voxels in the branch (this
-    % includes the skeleton)
-    aux = dict(br);
-    dbr = d(aux, aux);
-    dictbr = sparse(br, ones(length(br), 1), 1:length(br));
+    % straighten all branch voxels using a local rigid transformation
+    if (~isempty(cc))
+        
+        % list of voxels that are part of the skeleton in the branch
+        sk = cc.PixelIdxList{I};
+        
+        % coordinates of skeleton voxels
+        [r, c, s] = ind2sub(size(nrrd.data), sk);
+        x = scinrrd_index2world([r, c, s], nrrd.axis)';
     
-    % get the indices for skeleton voxels only in the branch
-    idxsk = dictbr(sk);
-    
-    % compute distances from all branch voxels to skeleton points in the
-    % branch
-    dbrsk = dijkstra(dbr, idxsk);
-    
-    % sort the skeleton points so that we can select the closest skeleton
-    % points
-    [~, idxbrsk] = sort(dbrsk, 1, 'ascend');
-    idxbrsk = idxbrsk(1:K, :);
-
-    %% straighten all branch voxels using a local similarity transformation
-    
-    if (STRAIGHT)
+        % create a distance matrix for all the voxels in the branch (this
+        % includes the skeleton)
+        aux = dict(br);
+        dbr = d(aux, aux);
+        dictbr = sparse(br, ones(length(br), 1), 1:length(br));
+        
+        % convert image indices to distance matrix indices
+        sk = dictbr(sk);
+        
+        % compute distance from each branch voxels to all skeleton points
+        dbrsk = dijkstra(dbr, sk);
+        
+        % keep only the closest skeleton point association
+        [~, idx] = sort(dbrsk, 1, 'ascend');
+        idx = idx(1, :);
+        
         % create a straightened section of the skeleton of the same length
         % and with the same spacing between voxels
-        xskp = [cc.PixelParam{I}' ; zeros(2, length(sk))];
+        y = [cc.PixelParam{I}' ; zeros(2, length(sk))];
         
-        % init variable for warped branch points
-        z = zeros(size(xskp, 1), length(br));
+        % straighten branch voxels
+        yi = pts_local_rigid(x', y', xi', idx)';
+
+    else % don't straighten objects
         
-        % loop every branch voxel
-        for J = 1:length(br)
-            
-            % convert indices of closest skeleton voxels to indices in the
-            % branch, and then extract their real world coordinates
-            ysk = x(:, idxsk(idxbrsk(:, J)));
-            
-            % get the coordinates of the corresponding stretched skeleton
-            % points
-            ysk2 = xskp(:, idxbrsk(:, J));
-            
-            % compute similarity transformation between the original and
-            % straightened skeleton points
-            [~, ~, t] = procrustes(ysk2', ysk');
-            
-            % extract real world coordinates of the voxel we are trying to
-            % warp
-            x2 = x(:, J);
-            
-            % interpolate point
-            z(:, J) = (t.b * x2' * t.T + t.c(1, :))';
-        end
-        
-    else % STRAIGHT=false
-        
-        z = x;
+        yi = xi;
         
     end
     
     %% compute statistics about the shape of the branch
     
     % compute eigenvalues of branch
-    [~, eigd(:, I)] = pts_pca(z);
+    [~, eigd(:, I)] = pts_pca(yi);
     
 end
 
